--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^11.5.4",
     "mongodb": "^5.9.2",
     "mongoose": "^8.6.1",
     "next": "14.2.8",
